--- a/Fret1/Fret1/Fret1.csproj
+++ b/Fret1/Fret1/Fret1.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="MusicTheory">
+      <HintPath>Lib\MusicTheory.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
