--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+.vscode/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
